minor update sitzplan

--- a/magnolia-module-geologix/src/main/resources/geologix/apps/sitzplan.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/apps/sitzplan.yaml
@@ -402,7 +402,7 @@ subApps:
                 i18n: true
                 class: info.magnolia.ui.form.field.definition.TextFieldDefinition
               - name: image
-                label: Bild
+                label: Sitzplan
                 class: info.magnolia.ui.form.field.definition.LinkFieldDefinition
                 targetWorkspace: dam
                 appName: assets
