--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>info.magnolia.rest</groupId>
+                <artifactId>magnolia-rest-tools</artifactId>
+                <version>2.1.1</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
