--- a/magnolia-module-geologix/pom.xml
+++ b/magnolia-module-geologix/pom.xml
@@ -38,6 +38,17 @@
             <artifactId>magnolia-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>info.magnolia.rest</groupId>
+            <artifactId>magnolia-rest-integration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.6</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- TEST -->
         <dependency>
             <groupId>junit</groupId>
