--- a/geologix-webapp/pom.xml
+++ b/geologix-webapp/pom.xml
@@ -99,6 +99,7 @@
                     <!-- exclude jars copied "physically" from the webapp overlay - so we only get those resolved by Maven's dependency management -->
                     <dependentWarExcludes>WEB-INF/lib/*.jar</dependentWarExcludes>
                 </configuration>
+                <version>3.2.3</version>
             </plugin>
         </plugins>
     </build>
