--- a/magnolia-module-geologix/pom.xml
+++ b/magnolia-module-geologix/pom.xml
@@ -45,7 +45,6 @@
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
-            <version>1.5.6</version>
             <scope>compile</scope>
         </dependency>
 
@@ -54,6 +53,10 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>info.magnolia.rest</groupId>
+            <artifactId>magnolia-rest-services</artifactId>
         </dependency>
     </dependencies>
 
