--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
                 <version>2.1.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>1.5.6</version>
+                <scope>compile</scope>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
