--- a/magnolia-module-geologix/src/main/resources/geologix/restEndpoints/demo.yaml
+++ b/magnolia-module-geologix/src/main/resources/geologix/restEndpoints/demo.yaml
@@ -1,3 +1,3 @@
-class: info.magnolia.rest.service.node.definition.ConfiguredNodeEndpointDefinition
-#class: info.magnolia.rest.registry.ConfiguredEndpointDefinition
+#class: info.magnolia.rest.service.node.definition.ConfiguredNodeEndpointDefinition
+class: info.magnolia.rest.registry.ConfiguredEndpointDefinition
 implementationClass: ch.yaro.geologix.rest.service.v1.DemoEndpoint
